--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.1",
     "sweetalert": "^2.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
