--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-select": "^5.10.0",
     "reactstrap": "^9.2.1",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.15.10",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
