--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.3",
     "react-select": "^5.10.0",
     "reactstrap": "^9.2.1",
     "sweetalert": "^2.1.2",
