--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "image-to-base64": "^2.2.0",
     "mssql": "^11.0.1",
     "mysql2": "^3.12.0",
+    "numero-a-letras": "^1.0.6",
     "pdfmake": "^0.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
